# personal-finances

./: .gitignore  Dockerfile  LICENSE  Makefile  cypress.config.ts  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
backend/: .gitignore  .pylintrc
backend/backend/: settings.py  urls.py
backend/react_refresh/templatetags/: react_refresh.py
cypress/e2e/: vite+react.cy.js
cypress/e2e/Vite+React/: vite+react.feature  vite+react.ts
frontend/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
